--- a/APIProyectoCBP/FrontEnd/appsettings.json
+++ b/APIProyectoCBP/FrontEnd/appsettings.json
@@ -6,6 +6,9 @@
     }
 
   },
+  "ConnectionStrings": {
+    "connectionstr": "Server=local\\MSSQL;Database=DBLogin;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
 
-    "AllowedHosts": "*"
-  }
+  "AllowedHosts": "*"
+}
