--- a/APIProyectoCBP/FrontEnd/appsettings.json
+++ b/APIProyectoCBP/FrontEnd/appsettings.json
@@ -7,7 +7,7 @@
 
   },
   "ConnectionStrings": {
-    "connectionstr": "Server=local\\MSSQL;Database=DBLogin;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "connectionstr": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=DBLogin;Integrated Security=True"
   },
 
   "AllowedHosts": "*"
